// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentPanel renders closed 1`] = `
<DocumentFragment>
  <mock-styledpanelbase
    closebuttonarialabel="Close panel"
    headerclassname="content-header"
    headertext="THE CONTENT TITLE"
    headertextprops="[object Object]"
    islightdismiss="true"
    isopen="false"
    type="3"
  >
    <div
      class="content"
    >
      CONTENT FOR TESTING
    </div>
  </mock-styledpanelbase>
</DocumentFragment>
`;

exports[`ContentPanel renders from content 1`] = `
<DocumentFragment>
  <mock-styledpanelbase
    closebuttonarialabel="Close panel"
    headerclassname="content-header"
    headertext="THE CONTENT TITLE"
    headertextprops="[object Object]"
    islightdismiss="true"
    isopen="true"
    type="3"
  >
    <div
      class="content"
    >
      CONTENT FOR TESTING
    </div>
  </mock-styledpanelbase>
</DocumentFragment>
`;

exports[`ContentPanel renders from path 1`] = `
<DocumentFragment>
  <mock-styledpanelbase
    closebuttonarialabel="Close panel"
    headerclassname="content-header"
    headertext="THE CONTENT TITLE"
    headertextprops="[object Object]"
    islightdismiss="true"
    isopen="true"
    type="3"
  >
    <div
      class="content"
    >
      CONTENT FOR TESTING
    </div>
  </mock-styledpanelbase>
</DocumentFragment>
`;
